<?xml version="1.0" encoding="utf-8"?>

<!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            app:cardBackgroundColor="@color/honeydew"
            app:cardCornerRadius="10dp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical"
                android:padding="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_device_name"
                        android:textSize="28sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/device_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="28sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_device_address"
                        android:textSize="28sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/device_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_state"
                        android:textSize="28sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/connection_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disconnected"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="测试状态:"
                        android:textSize="28sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <CheckedTextView
                        android:id="@+id/check_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dp"
                        android:text="    "
                        android:background="@drawable/on_and_off"
                        android:checked="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="信        号:"
                        android:textSize="28sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/rssi_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adult_data"
                        android:textSize="28sp" />

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/adult_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"
                    android:id="@+id/mTv1Layout"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baby_data"
                        android:textSize="28sp" />
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/baby_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/no_data"
                        android:textSize="28sp" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/sendUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="发送用户信息"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <Button
                android:id="@+id/goto_infant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="进入抱婴模式"/>
            <Button
                android:id="@+id/out_infant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="跳出抱婴模式"/>



        </LinearLayout>


        <Button
            android:id="@+id/SendClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="bottom"
            android:onClick="onClick"
            android:text="发送清除历史" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            android:background="@drawable/corner_backbtn"
            android:textColor="@color/white"
            android:text="断开返回" />

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--<Button-->
        <!--android:id="@+id/button1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:text="断开返回" />-->
        <!--</RelativeLayout>-->
    </LinearLayout>
</ScrollView>
